<resources>
    <string name="app_name">Our Vedic</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="shop">Shop</string>
    <string name="your_cart">Your Cart</string>
    <string name="share">Share</string>
    <string name="welcome">Welcome</string>
    <string name="shop_by_religion">Shop By Religion</string>
    <string name="image">image</string>
    <string name="textview">TextView</string>
    <string name="hindu">Hindu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="about">about</string>
    <string name="aboutdes">This App is about providing things needed in pooja from pandit to samagri each and everything for each and every religion.</string>
    <string name="islam">Islam</string>
    <string name="christan">Christan</string>
    <string name="sikh">Sikh</string>
    <string name="buddh">Buddh</string>
    <string name="jain">Jain</string>
    <string name="place_order">Place Order</string>
    <string name="check_out">Check Out</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="confirm">Confirm</string>
    <string name="pandit">Pandit</string>
    <string name="note">NOTE : YOU CAN ORDER FOR ONE RELIGION AT A TIME</string>


</resources>