<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/shop"
        android:icon="@drawable/ic_baseline_shopping_bag_24"
        android:title="@string/shop"
        android:visible="true" />

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/your_cart" />

    <item
        android:id="@+id/pandit"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/pandit" />


    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about" />

    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_baseline_contact_support_24"
        android:title="@string/contact" />
</menu>